--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
+      run: go mod download
 
     - name: Test
       run: go test -v ./... -coverprofile coverage.out -covermode count
