--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-go@v2
+    with:
+        go-version: 1.17
 
     - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17
-      run: go mod download
+      run: go mod download  
 
     - name: Test
       run: go test -v ./... -coverprofile coverage.out -covermode count
